[gd_scene load_steps=22 format=2]

[ext_resource path="res://res/Gui/copper_icon.png" type="Texture" id=1]
[ext_resource path="res://Gui/GUI.gd" type="Script" id=2]
[ext_resource path="res://font/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Gui/ElementButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://res/Kolozembate_wcisnienty.png" type="Texture" id=5]
[ext_resource path="res://res/Kolozembate.png" type="Texture" id=6]
[ext_resource path="res://res/Gui/tab.png" type="Texture" id=7]
[ext_resource path="res://res/Gui/build_button.png" type="Texture" id=8]
[ext_resource path="res://res/Gui/parts_slots.png" type="Texture" id=9]
[ext_resource path="res://res/Gui/square.png" type="Texture" id=10]
[ext_resource path="res://res/Gui/build_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://font/OpenSans-SemiBold.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 12 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform bool enabled = false;

void fragment() {
	
	vec4 tex = textureLod(TEXTURE, UV, 1.0);
	
	if (enabled && tex.r > 0.2 && tex.b < 0.8) {
		tex.r += (1.0 + sin(TIME * 5.0 + UV.x * 10.0 + UV.y * 10.0)) * 0.5 * 0.3;
//		tex.b -= (1.0 + sin(TIME * 5.0 + UV.x * 10.0 + UV.y * 10.0)) * 0.5 * 0.1;
		tex.r *= 1.5 + sin(TIME * 10.0 + (UV.x + UV.y) * 10.0) * 0.5;
		tex.g *= 1.5 + sin(TIME * 10.0 + (UV.x + UV.y) * 10.0) * 0.5;
	}
	
	COLOR = tex;
	
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/enabled = false

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 11 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 8 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 154, 154 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 153, 153 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 154, 154 )

[sub_resource type="DynamicFont" id=9]
size = 14
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.12244
margin_top = -0.297302
margin_right = -1.12244
margin_bottom = -0.297302
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="CopperCounter" type="NinePatchRect" parent="."]
margin_left = 125.0
margin_top = 700.0
margin_right = 309.0
margin_bottom = 783.0
mouse_filter = 0
texture = ExtResource( 10 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CopperCounter"]
margin_left = 20.0
margin_top = 11.0
margin_right = 176.0
margin_bottom = 63.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopperIcon" type="TextureRect" parent="CopperCounter/HBoxContainer"]
margin_right = 50.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 15
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CopperCounter/HBoxContainer"]
margin_left = 58.0
margin_right = 156.0
margin_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.792157, 0.6, 0.505882, 1 )
text = "200"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildModeButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 0.996078, 1 )
material = SubResource( 3 )
margin_left = 31.0
margin_top = 698.0
margin_right = 111.0
margin_bottom = 778.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -98.9949
margin_top = -95.5612
margin_right = 1.00513
margin_bottom = 4.43884
rect_min_size = Vector2( 100, 100 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -426.0
margin_right = 10.0
margin_bottom = -426.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="NinePatchRect" parent="Shop"]
self_modulate = Color( 0.815686, 0.815686, 0.815686, 0.784314 )
margin_left = 2.98513
margin_top = 50.4375
margin_right = 577.985
margin_bottom = 325.438
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 7 )
region_rect = Rect2( -20, -30, 1190, 540 )
patch_margin_left = 90
patch_margin_top = 90
patch_margin_right = 90
patch_margin_bottom = 90
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panels" type="Control" parent="Shop"]
margin_left = 28.0
margin_top = 82.0
margin_right = 546.0
margin_bottom = 295.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModulesButtons" type="Control" parent="Shop/Panels"]
margin_right = 314.0
margin_bottom = 213.0
rect_min_size = Vector2( 314, 213 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsBack" type="TextureRect" parent="Shop/Panels/ModulesButtons"]
margin_left = 4.0
margin_top = 3.0
margin_right = 607.0
margin_bottom = 409.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsGrid" type="GridContainer" parent="Shop/Panels/ModulesButtons"]
margin_left = 7.0
margin_top = 7.0
margin_right = 597.0
margin_bottom = 201.0
rect_min_size = Vector2( 295, 97 )
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="Shop/Panels/ModulesButtons/ButtonsGrid" instance=ExtResource( 4 )]
margin_right = 95.0
margin_bottom = 95.0

[node name="Button2" parent="Shop/Panels/ModulesButtons/ButtonsGrid" instance=ExtResource( 4 )]
margin_left = 99.0
margin_right = 194.0
margin_bottom = 95.0

[node name="Button3" parent="Shop/Panels/ModulesButtons/ButtonsGrid" instance=ExtResource( 4 )]
margin_left = 198.0
margin_right = 293.0
margin_bottom = 95.0

[node name="Button4" parent="Shop/Panels/ModulesButtons/ButtonsGrid" instance=ExtResource( 4 )]
margin_left = 297.0
margin_right = 392.0
margin_bottom = 95.0

[node name="Button5" parent="Shop/Panels/ModulesButtons/ButtonsGrid" instance=ExtResource( 4 )]
margin_left = 396.0
margin_right = 491.0
margin_bottom = 95.0

[node name="Button6" parent="Shop/Panels/ModulesButtons/ButtonsGrid" instance=ExtResource( 4 )]
margin_left = 495.0
margin_right = 590.0
margin_bottom = 95.0

[node name="Button7" parent="Shop/Panels/ModulesButtons/ButtonsGrid" instance=ExtResource( 4 )]
margin_top = 99.0
margin_right = 95.0
margin_bottom = 194.0

[node name="Button8" parent="Shop/Panels/ModulesButtons/ButtonsGrid" instance=ExtResource( 4 )]
margin_left = 99.0
margin_top = 99.0
margin_right = 194.0
margin_bottom = 194.0

[node name="Button9" parent="Shop/Panels/ModulesButtons/ButtonsGrid" instance=ExtResource( 4 )]
margin_left = 198.0
margin_top = 99.0
margin_right = 293.0
margin_bottom = 194.0

[node name="Description" type="Control" parent="Shop/Panels"]
self_modulate = Color( 0.2, 0.2, 0.2, 1 )
margin_left = 318.0
margin_right = 518.0
margin_bottom = 171.0
rect_min_size = Vector2( 200, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back2" type="NinePatchRect" parent="Shop/Panels/Description"]
self_modulate = Color( 0.815686, 0.815686, 0.815686, 0.784314 )
margin_left = 11.0
margin_top = -1.0
margin_right = 191.0
margin_bottom = 167.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 7 )
region_rect = Rect2( -20, -30, 1190, 540 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/Panels/Description"]
margin_left = 21.0
margin_top = 17.0
margin_right = 180.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModuleName" type="Label" parent="Shop/Panels/Description/VBoxContainer"]
margin_right = 159.0
margin_bottom = 20.0
rect_min_size = Vector2( 5, 0 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.894118, 0.796078, 0.74902, 1 )
text = "Tooltip"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModuleTooltip" type="Label" parent="Shop/Panels/Description/VBoxContainer"]
margin_top = 24.0
margin_right = 159.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.894118, 0.796078, 0.74902, 1 )
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="HBoxContainer" parent="Shop/Panels"]
margin_left = 340.0
margin_top = 158.0
margin_right = 496.0
margin_bottom = 210.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopperIcon" type="TextureRect" parent="Shop/Panels/Cost"]
margin_right = 50.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 15
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Shop/Panels/Cost"]
margin_left = 58.0
margin_right = 156.0
margin_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.792157, 0.6, 0.505882, 1 )
text = "200"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
